Bug 76312 - FILESAVE: LO crashes while saving the document
Summary: FILESAVE: LO crashes while saving the document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
: 76348 (view as bug list)
Depends on: 76348
Blocks:
  Show dependency treegraph
 
Reported: 2014-03-18 11:55 UTC by Ravindra Vidhate
Modified: 2014-03-21 11:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Original File (85.37 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-18 11:55 UTC, Ravindra Vidhate
Details
File contains table in header followed by table in body part. The first page contains a shape. (36.68 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-19 12:32 UTC, Umesh Kadam
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-03-18 11:55:12 UTC
Created attachment 95994 [details]
Original File
Comment 1 Umesh Kadam 2014-03-19 12:32:30 UTC
Created attachment 96039 [details]
File contains table in header followed by table in body part. The first page contains a shape.
Comment 2 Commit Notification 2014-03-20 12:05:30 UTC
umeshkadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ff5af221e76d3efead192d6598f94da797f4028

fdo#76312: LO crashes - endTableCell is called before StartTable.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Julien Nabet 2014-03-20 20:34:55 UTC
*** Bug 76348 has been marked as a duplicate of this bug. ***